# lightning-ai__torchmetrics

./: pyproject.toml  requirements.txt  setup.cfg
.azure/: gpu-pipeline.yml
.github/workflows/: ci_install-pkg.yml  ci_integrate.yml  ci_schema.yml  ci_test-full.yml  code-format.yml  docs-check.yml
requirements/: test.txt  text.txt  text_test.txt
